<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:stretchColumns="*">


    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="10dp">

        <TextView
            android:id="@+id/list_recipe_title"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="title"
            android:textSize="12sp"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/list_prep_time"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="prep time"
            android:textSize="12sp"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/list_recipe_category"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="Category"
            android:textSize="12sp"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/list_num_servings"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="Servings"
            android:textSize="12sp"
            android:textAlignment="center"/>
    </TableRow>

    <View style="@style/Divider"/>

</TableLayout>