...

            </TableRow>
        </TableLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/shopping_list"
            android:layout_width="match_parent"
            android:layout_height="650dp"
            android:clickable="false" />
    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_nav_menu"/>
...
